# rkwebutil

./: .gitignore  LICENSE  README.md  auth.py  config.py  db.py  docker-compose.yaml  example_ap.js  example_ap.py  example_ap_start.js  example_db.py  flaskauth.py  flaskauth_sql.py  pyproject.toml  resetpasswd_start.js  rkauth.js  rkauth_client.py  rkauth_flask.py  rkauth_webpy.py  rkwebutil.js  rkwebutil.py  svgplot.css  svgplot.js  testsvgplot.html
.github/workflows/: run-tests.yaml
rkwebutil/: __init__.py  config.py  make_password.py  rkauth_client.py  rkauth_flask.py  rkauth_webpy.py  rkwebutil.py
rkwebutil/static/: rkauth.js  rkwebutil.js  svgplot.js
test/: conftest.py  docker-compose.yaml  test_auth.py  test_config.py  test_mjd.py
test/docker_apache/: 000-default.conf  Dockerfile  Makefile  ap  server.py
test/docker_flask/: Dockerfile  Makefile  createdb.py  key.pem
test/docker_flask/ap/: __init__.py
test/docker_flask/ap/static/: ap.js  tconv_start.js
test/docker_flask/ap/templates/: ap.html  tconv.html
test/docker_flask_sa/: Dockerfile  Makefile  createdb.py  key.pem  server.py
test/docker_flask_sa/ap/: __init__.py  db.py  static  templates
test/docker_flaskserver/: Dockerfile  Makefile  cert.pem  createdb.py  server.py
test/docker_flaskserver/ap/: __init__.py  db.py
test/docker_flaskserver/ap/static/: ap.js  tconv.js
test/docker_flaskserver/ap/templates/: ap.html  base.html
test/docker_flaskserver_sql/: Dockerfile  Makefile  cert.pem  key.pem  server.py
test/docker_flaskserver_sql/ap/: __init__.py  static  templates
test/docker_postgres/: Dockerfile  run_postgres.sh
test/docker_test/: Dockerfile
test/docker_webpy/: 000-default.conf  Dockerfile  Makefile  ap.css  ap.js  ap.py  ap_start.js  cert.pem  createdb.py  wsgi.conf.patch
test/docker_webpy_sa/: 000-default.conf  Makefile
test/docker_webserver/: 000-default.conf  Dockerfile  Makefile  ap.js  ap.py  ap_start.js  createdb.py  db.py
test/html_install/: index.html
