# go into a venv
# pip install build
# python -m build --sdist --outdir dist .

[project]
name = "rkwebutil"
description = "Rob Knop's Personal Web Utilities"
authors = [ { name="Rob Knop" } ]
maintainers = [ { name="Rob Knop", email="rknop@pobox.com" } ]
dynamic = [ "version" ]
requires-python = ">3.11"

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Deveopment Status :: 4 - Beta",
  "Programming Language :: Python"
]

dependencies = [
  "dateutils>=0.6.12",
  "flask-session==0.8.0",
  "flask>=3.1",
  "psycopg2-binary>=2.9.10",
  "pycryptodome>=3.20",
  "pytz>=2022.7.1",
  "pyyaml>=6.0.2",
  "requests>=2.28"
]

license-files = [ "LICENSE" ]

[project.optional-dependencies]
test = [ "pytest",
         "remote-pdb"
       ]

[project.urls]
repository = "https://github.com/rknop/rkwebutil"


[build-system]
requires = [
  "setuptools>=62.1",
  "wheel"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false
include = [ "rkwebutil" ]

[tool.setuptools.dynamic]
version = { attr = "rkwebutil.__version__" }

